fix layout problems

--- a/style.css
+++ b/style.css
@@ -1,24 +1,30 @@
-.container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+body{
+    margin: 0;
 }
 
-.weightboard{
+.container {
     display: flex;
+    flex-direction: column;
+    height: 100vh; 
+}
+
+.weightboard {
+    display: flex;
+    justify-content: center;
     gap: 20px;
+    padding: 20px;
 }
 
 .seesaw-container{
+    flex-grow: 1;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
     position: relative;
 }
 
 .plank{
+    position: relative;
     width: 600px;
     height: 30px;
     background-color: red;
@@ -33,7 +39,7 @@
     border-right: 50px solid transparent;
     border-bottom: 80px solid black;
     position: absolute;
-    top: 30px;
+    top: calc(50% + 15px);
     left: 50%;
     transform: translateX(-50%);
 }
